Fixed alignment on nav for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,6 @@ header nav ul li {
 	font-size: 0.875rem;
 	font-weight: 700;
 	text-transform: uppercase;
-	padding: 0 10px;
 	width: 100%;
 	line-height: 2.25rem;
 }
